--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
 
     <!-- Full-screen Hero Section with CTA -->
     <section class="hero">
-        <div class="overlay">
-            <h2>Bringing Attention to an Ongoing Crisis</h2>
-            <p>The ongoing genocide in Congo is a humanitarian crisis that the world can no longer ignore.</p>
-            <a href="#learn-more" class="cta-button">Learn More</a>
-        </div>
-    </section>
+    <div class="overlay">
+        <img src="images/congo_people.jpg" alt="People from Congo" class="hero-image">
+        <h2>Bringing Attention to an Ongoing Crisis</h2>
+        <p>The ongoing genocide in Congo is a humanitarian crisis that the world can no longer ignore.</p>
+        <a href="#learn-more" class="cta-button">Learn More</a>
+    </div>
+</section>
 
     <!-- Content Grid Layout -->
     <section id="learn-more" class="grid-container">
