--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
         <h2>Call for Global Attention</h2>
         <p>The international community must take a stand to support peace efforts in Congo and hold those responsible for war crimes accountable.</p>
     </section>
-
+    
+    <!-- Navigation buttons -->
+<div class="navigation-buttons">
+    <a href="#top" class="back-to-top">Back to Top</a>
+    <a href="causes.html" class="next-page">Next Page</a>
+</div>
 
     <footer>
         <p>© 2024 Congo Awareness Initiative</p>
