--- a/index.html
+++ b/index.html
@@ -65,5 +65,18 @@
         <p>© 2024 Congo Awareness Initiative</p>
     </footer>
 
+    <script>
+    const backToTopButton = document.querySelector('.back-to-top');
+
+    window.addEventListener('scroll', () => {
+        if (window.scrollY > 300) {
+            backToTopButton.style.display = 'block';
+        } else {
+            backToTopButton.style.display = 'none';
+        }
+    });
+</script>
+
+
 </body>
 </html>
