--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Navigation buttons -->
 <div class="navigation-buttons">
     <a href="#top" class="back-to-top">Back to Top</a>
-    <a href="causes.html" class="next-page">Next Page</a>
+    <a href="causes.html" class="next-page">Causes Page</a>
 </div>
 
     <footer>
