--- a/consequences.html
+++ b/consequences.html
@@ -50,6 +50,17 @@
     <footer>
         <p>© 2024 Congo Awareness Initiative</p>
     </footer>
+    <script>
+    const backToTopButton = document.querySelector('.back-to-top');
+
+    window.addEventListener('scroll', () => {
+        if (window.scrollY > 300) {
+            backToTopButton.style.display = 'block';
+        } else {
+            backToTopButton.style.display = 'none';
+        }
+    });
+</script>
 
 </body>
 </html>
