--- a/consequences.html
+++ b/consequences.html
@@ -47,6 +47,14 @@
         <p>The loss of life and the trauma inflicted on Congo’s population will have long-term consequences, impacting future generations who will grow up in the shadow of violence.</p>
     </section>
 
+    <!-- Navigation buttons -->
+<div class="navigation-buttons">
+    <a href="#top" class="back-to-top">Back to Top</a>
+    <a href="consequences.html" class="next-page">Home Page</a>
+    <a href="causes.html" class="next-page">Causes Page</a>
+
+</div>
+
     <footer>
         <p>© 2024 Congo Awareness Initiative</p>
     </footer>
