--- a/causes.html
+++ b/causes.html
@@ -47,6 +47,14 @@
         <p>Foreign interests continue to play a role in Congo’s instability, with outside powers often fueling conflicts to secure access to Congo’s natural resources.</p>
     </section>
 
+     <!-- Navigation buttons -->
+<div class="navigation-buttons">
+    <a href="#top" class="back-to-top">Back to Top</a>
+    <a href="index.html" class="next-page">Home Page</a>
+    <a href="consequences.html" class="next-page">Consequences Page</a>
+
+</div>
+
     <footer>
         <p>© 2024 Congo Awareness Initiative</p>
     </footer>
